# clify

./: .gitignore  .travis.yml  README.md  setup.cfg  test-requirements.txt  tox.ini
clify/: app.py  command.py  daemon.py
clify/test/: base.py  test_application.py
