[metadata]
name = clify
author = Ryan Belgrave
author-email = rmb1993@gmail.com
summary = Python Command Line Framework built on argparse
description-file = README.md
home-page = https://github.com/rmb938/clify
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Application Frameworks

[files]
packages =
    clify

[pbr]
skip_authors = 1
skip_changelog = 1